--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="author" content="Miguel Mañas" />
         <title>Art Gallery</title>
         <script src="js/detail.js" type="module"></script>
@@ -33,7 +33,7 @@
     <body>
         <noscript>Please, enable Javascript to run this website</noscript>
         <header class="header-top"></header>
-        <main>
+        <main class="detail-main">
             <div class="container-back">
                 <button id="button-back">
                     <span class="material-symbols-outlined">arrow_back</span>
