--- a/favorites.html
+++ b/favorites.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="author" content="Miguel Mañas" />
         <title>Art Gallery - Favorites</title>
         <script src="js/favorites.js" type="module"></script>
@@ -39,10 +39,19 @@
                 <div class="container-status">
                     <span class="status-message"></span>
                 </div>
-                <div class="container-remove">
+                <button class="open-remove-dialog">
                     <span class="material-symbols-outlined">delete</span>
                     <p>Remove favorites</p>
-                </div>
+                </button>
+                <dialog class="remove-dialog">
+                    <h2>Remove favorites</h2>
+                    <p>
+                        Are you sure you want to remove your favorites
+                        collection?
+                    </p>
+                    <button class="cancel-button">Cancel</button>
+                    <button class="remove-button">Remove</button>
+                </dialog>
             </div>
             <section class="slider">
                 <div class="container-favorites"></div>
