--- a/templates.html
+++ b/templates.html
@@ -1,8 +1,9 @@
+<!-- Not needed, but avoids error message when using Live Server extension -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Document</title>
     </head>
     <body></body>
