remove favorites with confirmation dialog

--- a/favorites.html
+++ b/favorites.html
@@ -44,13 +44,18 @@
                     <p>Remove favorites</p>
                 </button>
                 <dialog class="remove-dialog">
+                    <button class="close-button">
+                        <span class="material-symbols-outlined">close</span>
+                    </button>
                     <h2>Remove favorites</h2>
                     <p>
                         Are you sure you want to remove your favorites
                         collection?
                     </p>
-                    <button class="cancel-button">Cancel</button>
-                    <button class="remove-button">Remove</button>
+                    <div class="dialog-buttons">
+                        <button class="cancel-button">Cancel</button>
+                        <button class="remove-button">Remove</button>
+                    </div>
                 </dialog>
             </div>
             <section class="slider">
